@@ -5,6 +5,7 @@ kingston-update-notifier (1.2.3) UNRELEASED; urgency=low
     of:
     - po/hu.po
     - Updates to kingston-update-notifier.{desktop,notifyrc}
+  * src/notifier.cpp: Move the "Reboot" button into the right notification.
 
  -- Kai Wasserbäch <curan@debian.org>  Sat, 26 Feb 2011 12:45:54 +0100
 
